--- a/script.html
+++ b/script.html
@@ -1,11 +1,21 @@
-<!doctype html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="test" content="width=device-width" />
-    <title>Ma page de test</title>
-  </head>
-  <body>
-    <img src="" alt="" />
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Projet 2</title>
+    </head>
+
+    <body>
+        <h2>test</h2>
+        <p>
+            Cette page contient <strong>uniquement</strong> du code HTML.<br/>
+
+
+        </p>
+
+        <ul>
+            <li style="color: blue;">Texte en bleu</li>
+            <li style="color: red;">Texte en rouge</li>
+            <li style="color: green;">Texte en vert</li>
+        </ul>
+    </body>
 </html>
